--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <h1>Welcome to Angular Framework</h1>
 <hr>
 <div class=text-center>
+    <h2>Git and github(6/05/21)</h2>
     <h2 class="text-danger">Interpolation</h2>
     <h1 class="text-info">{{name}}  {{version}}</h1>
     <h2 class="text-warning">{{instructor}}</h2>
